fix footer overlap

--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -1,10 +1,9 @@
 .footer {
   background-color: #92b09a;
-  text-align: center;
+  bottom: 0;
   padding: 0.3rem;
   position: fixed;
-  bottom: 0;
-  left: 0;
+  text-align: center;
   width: 100%;
 }
 
