--- a/styles/Main.module.scss
+++ b/styles/Main.module.scss
@@ -46,6 +46,7 @@
   .roomText {
     width: 80%;
     text-align: center;
+    margin-bottom: 3rem;
   }
 }
 
